--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -58,8 +58,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Harpocrates.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Nat">
-      <HintPath>..\Mono.Nat.dll</HintPath>
+    <Reference Include="Mono.Nat, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6c9468a3c21bc6d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mono.Nat.2.0.0\lib\netstandard2.0\Mono.Nat.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -173,12 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\754830.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\754830.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\iconfinder-512.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\RookWhite.ico" />
